
syntax = "proto3";
option go_package = ".;pb";

message SendEmailRequest{
    string sender = 1;
    string subject = 2;
    string body = 3;
    string recipent = 4;
}

message SendEmailResponse{
    string message = 1;
    int32 statusCode =2;
}

message CreateEmailRequest{
    string email = 1;
}

message CreateEmailResponse{
    string message = 1;
    int32 statusCode =2;
}